--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,12 +32,12 @@
     <string name="version">Version 1.0</string>
     <dimen name="guideline2">266dp</dimen>
     <string name="network_error">Network Error, Please retry</string>
-    <string name="explain_card">All search features are provide by SauceNao API, not this app.\n\nIf you love this app, Please consider donate to SauceNao.</string>
+    <string name="explain_card">All search features are provide by SauceNao API, not this app.\nIf you love this app, Please consider donate to SauceNao.</string>
     <string name="explain2_card">default image is from <font color='#2196F3'>https://www.pixiv.net/artworks/69554856</font>\n\nPixiv user: snatti\n\nPixiv id: 3143520</string>
     <string name="feedback">Feedback</string>
     <string name="feedback_detail">If you find a bug or want new features to be added, please report it</string>
     <string name="github" translatable="false">Github</string>
     <string name="github_detail">Fork the project on Github</string>
     <string name="how_to_use">How to use</string>
-    <string name="how_to_use_detail">Select a picture or picture link, and select \"Image Search\" in the share menu</string>
+    <string name="how_to_use_detail">·Select a picture or picture link, and select \"Image Search\" in the share menu\n·Press the upload button to select a picture</string>
 </resources>
