--- a/app/src/main/res/values-zh-rcn/strings.xml
+++ b/app/src/main/res/values-zh-rcn/strings.xml
@@ -9,28 +9,31 @@
     <string name="source_empty">空资源</string>
 
     <!--        SnackBar        -->
-    <string name="ip_exceeded_limit">您的IP超过每天 200 搜索限制</string>
-    <string name="snack_server_errors">SauceNao 服务出错. 结果可能不正确!</string>
-    <string name="snack_wrong_url">不支持的URL, 请检查.</string>
+    <string name="ip_exceeded_limit">错误，您的ip可能超过了单日200限制</string>
+    <string name="snack_server_errors">网络错误，请重试!</string>
+    <string name="snack_wrong_url">错误的URL, 请检查.</string>
 
     <!--        others        -->
     <string name="thirdPartySite">3rd party</string>
-    <string name="pixiv">来源: Pixiv</string>
-    <string name="twitter">来源: Twitter</string>
-    <string name="exhentai">来源: Exhentai</string>
-    <string name="anidb">来源: Anidb</string>
-    <string name="deviantart">来源: Deviantart</string>
-    <string name="imdb">来源: IMDb</string>
-    <string name="gelbooru">来源: Gelbooru</string>
-    <string name="sankakucomplex">来源: Sankaku</string>
+    <string name="pixiv">网站: Pixiv</string>
+    <string name="twitter">网站: Twitter</string>
+    <string name="exhentai">网站: Exhentai</string>
+    <string name="anidb">网站: Anidb</string>
+    <string name="deviantart">网站: Deviantart</string>
+    <string name="imdb">网站: IMDb</string>
+    <string name="gelbooru">网站: Gelbooru</string>
+    <string name="sankakucomplex">网站: Sankaku</string>
+    <string name="danbooru">网站: Danbooru</string>
+    <string name="yande">网站: Yande.re</string>
+    <string name="konachan">网站: Konachan</string>
+    <string name="mangadex">网站: MangaDex</string>
+    <string name="manga">网站: Manga</string>
     <string name="imageSearch">图片搜索</string>
     <string name="nijie">Nijie</string>
     <string name="nico">Nico Nico</string>
-    <string name="isNull">无效数据</string>
     <string name="unknown_title">未知</string>
-    <string name="unknown_site">来源: 未知</string>
+    <string name="unknown_site">网站: 未知</string>
     <string name="about">关于</string>
-    <string name="version">Version 1.0</string>
     <dimen name="guideline2">276dp</dimen>
     <string name="network_error">网络错误, 请重试</string>
     <string name="explain_card">所有搜索功能均由SauceNao API提供，而非此应用。\n如果您喜欢此应用程序，请考虑捐赠给SauceNao。</string>
@@ -39,5 +42,8 @@
     <string name="feedback_detail">如果您遇到问题，请与我联系</string>
     <string name="github_detail">在 GitHub 上克隆项目</string>
     <string name="how_to_use">如何使用</string>
-    <string name="how_to_use_detail">·选择图片或者图片链接在分享菜单中选择「图片搜索」\n·按下上传按钮选择图片\n(部分结果可能需要科学上网才能访问)</string>
+    <string name="how_to_use_detail">·选择图片或者图片链接在分享菜单中选择「图片搜索」\n·点击🔍输入图片链接\n·按下上传按钮选择图片\n(部分结果可能需要科学上网才能访问)</string>
+    <string name="input_link_here">输入图片链接</string>
+    <string name="please_input_link">请输入链接</string>
+    <string name="input_link">输入链接</string>
 </resources>
